# F1_drivers_perf

./: Homepage.py  README.md  pyproject.toml  requirements.txt  streamlit_app.py
analysis/: cross_val.py  linear_reg.py  neural_network.py  random_forest.py  ridge_reg.py
analysis/compound_models/: change_driver.py  random_forest_ridge.py
analysis/general_models/: cross_val.py  hist_gradient_boosting.py  linear_reg.py  neural_network.py  random_forest.py  ridge_reg.py
data_extraction/: scrape_standings.py
data_processing/: extract_data.py  process_data.py
pages/: 1_race_pace.py  1_race_pace_comparisons.py  2_driver_replace.py  2_hypothetical_drivers_exchange.py
tmp/lottie/: racecar.json
tmp/raw_data/: test_drivers.csv
tmp/working_data/drivers_standings/: 2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv
tmp/working_data/track_data/: track_binary_EventName_Australian Grand Prix.csv  track_binary_EventName_Austrian Grand Prix.csv  track_binary_EventName_Azerbaijan Grand Prix.csv  track_binary_EventName_Bahrain Grand Prix.csv  track_binary_EventName_Belgian Grand Prix.csv  track_binary_EventName_Brazilian Grand Prix.csv  track_binary_EventName_British Grand Prix.csv  track_binary_EventName_Canadian Grand Prix.csv  track_binary_EventName_Chinese Grand Prix.csv  track_binary_EventName_Dutch Grand Prix.csv  track_binary_EventName_Eifel Grand Prix.csv  track_binary_EventName_Emilia Romagna Grand Prix.csv  track_binary_EventName_French Grand Prix.csv  (+17 more)
tmp/years/: 2018.csv  2019.csv  2020.csv  2021.csv  2022.csv
