[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["scikit-learn==1.3.2", "streamlit==1.29.0", "streamlit-lottie==0.0.5", "pandas==2.0.3",
    "plotly==5.18.0", "plotly-express==0.4.1", "numpy==1.26.1", "twine==4.0.2", "wheel==0.37.1"]
[tool.poetry]
name = "my_package"
authors = [
    {name = "David Bertrand", email = "david.bertrandg@gmail.com"},
]
description = "F1 drivers performance evaluation"
readme = "README.md"
